--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ p{
 }
 .title {
     text-align: center;
-    margin: 0 auto 80px;
+    margin: 0 auto 10px;
     position: relative;
     line-height: 60px;
     color: #555;
@@ -268,6 +268,79 @@ ul {
     display: none;
 }
 
+/*------All Products page------*/ 
+.row-2{
+    justify-content: space-between;
+    margin: 50px 10px 10px 10px;
+}
+select{
+    border: 1px solid #ff523b;
+    padding: 5px;
+}
+select:focus{
+    outline: none;
+}
+
+.page-btn{
+    margin: 0 auto 80px;
+}
+
+.page-btn span{
+    display: inline-block;
+    border: 1px solid #6e5d5b;
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    cursor: pointer;
+}
+.page-btn span:hover{
+    background: #ff523b;
+    color: #fff;
+}
+
+/*------single product details------*/
+.single-product{
+    margin-top: 80px;
+}
+.single-product .col-2 img{
+    padding: 0;
+}
+.single-product .col-2{
+    padding: 20px;
+}
+.single-product h4{
+    margin: 20px 0;
+    font-size: 20px;
+    font-weight: bold;
+}
+.single-product select{
+    display: block;
+    padding: 10px;margin-top: 20px;
+}
+.single-product input{
+    width: 50px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 20px;
+    margin-right: 10px;
+    border: 1px solid #ff523b;
+}
+input:focus{
+    outline: none;
+}
+.single-product .fa {
+     color: #ff523b;
+     margin-left: 10px;
+}
+.small-img-row{
+    display: flex;
+    justify-content: space-between;
+}
+.small-img-col{
+    flex-basis: 24%;
+    cursor: pointer;
+}
 
 /* ------- media query for menu --------- */
 @media only screen and (max-width: 800px) {
@@ -296,6 +369,42 @@ ul {
         display: block;
         cursor: pointer;
     }
+    .logo {
+        margin-right: 1rem;
+    }
+    .nav-icons {
+        display: flex;
+        flex-flow: row nowrap;
+        /* margin-top: 20px; */
+    }
+}
+
+/* ------- media query for menu for very small devices --------- */
+@media only screen and (max-width: 400px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .navbar-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .nav-icons {
+        margin-top: 0.5rem;
+    }
+
+    #menuItems {
+        margin-top: 2rem;
+    }
+    .col-2 {
+        min-width: auto;
+    }
+    .logo {
+        margin-right: 0;
+    }
+    .header .row {
+        margin-top: 0;
+    }
 }
 
 /* ------ media query for mobile devices ------- */
@@ -306,14 +415,35 @@ ul {
     .col-2, .col-3, .col-4 {
         flex-basis: 100%;
     }
+    .single-product .row{
+        text-align: left;
+
+    }
+    .single-product .col-2{
+        padding: 20px 0;
+    }
+    .single-product h1{
+        font-size: 26px;
+        line-height: 32px;
+    }
+    .col-2 h1{
+        font-size: 26px;
+        line-height: 32px;
+        text-align: left;
+        padding: 0 10px;
+    }
+    .col-2 p{
+        text-align: left;
+        padding: 0 10px;
+    }
+    .cart-info p{
+        display: none;
+    }
 }
 
 /* ------- for large device ------- */
 @media only screen and (min-width: 800px){
-    .cart-icon {
-        margin-top: 10px;
-    }
-    .logo-top {
+    .nav-icons {
         margin-top: 20px;
     }
 }
